Improved code readability. Fixed bugs.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -180,7 +180,7 @@ body,
       justify-content: center;
       align-items: center;
 
-      #sum-of-points {
+      #player-points {
         font-size: 60px;
       }
     }
